examples/optionality/negative/optional_without_omitzero/schema.go
//go:build jsonschema

package optional_without_omitzero

import (
	"encoding/json"

	jsonschema "github.com/tylergannon/go-gen-jsonschema"
)

func (Config) Schema() json.RawMessage { panic("not implemented") }

var _ = jsonschema.NewJSONSchemaMethod(Config.Schema)
